--- a/src/less/global.less
+++ b/src/less/global.less
@@ -1,17 +1,27 @@
 * {
   box-sizing: border-box;
+
+  &.mirror {
+    transform: rotateY(180deg);
+    transition: transform 0.5s ease-in-out;
+  }
 }
 
 html {
   font-size: 62.5%;
 }
 
-html, body {
-  font-family: 'Roboto', sans-serif;
+html,
+body {
+  font-family: "Roboto", sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: 'Indie Flower', cursive;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Indie Flower", cursive;
 }
 
 h1 {
